# FFmpegDemo

./: README.md  build_android_clang.sh  media_video_play.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ffmpegdemo/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
video/: build.gradle
video/src/androidTest/java/com/video/play/: ExampleInstrumentedTest.kt
video/src/main/: AndroidManifest.xml
video/src/main/cpp/: CMakeLists.txt  MediaVideoPlayer_Jni.cpp  play.cpp
video/src/main/cpp/include/: config.h
video/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h
video/src/main/cpp/player/decoder/: AudioDecoder.cpp  AudioDecoder.h  Decoder.h  DecoderBase.cpp  DecoderBase.h  VideoDecoder.cpp  VideoDecoder.h
video/src/main/cpp/player/render/: BaseGLRender.h
video/src/main/cpp/player/render/video/: VideoGLRender.cpp  VideoGLRender.h  VideoRender.h
video/src/main/cpp/util/: ImageDef.h  LogUtils.h
video/src/main/java/com/video/play/: MediaVideoPlayer.kt  NativeLib.kt
video/src/main/java/com/video/play/audio/: MediaAudioUtils.kt
video/src/main/java/com/video/play/audio/utils/: AudioFFmpegUtil.kt
video/src/main/java/com/video/play/utils/: EglContextWrapper.java  EglHelper.kt  EglHelperFactory.kt  GLThread.kt  GLViewRenderer.kt  IEglHelper.kt
video/src/main/java/com/video/play/widget/: VideoGLTextureView.kt
video/src/test/java/com/video/play/: ExampleUnitTest.kt
